--- a/meta/main.yml
+++ b/meta/main.yml
@@ -5,9 +5,9 @@ galaxy_info:
   license: MIT
   min_ansible_version: 1.9
   platforms:
-    - name: CentOS
+    - name: EL
       versions:
-        - all
+        - 6
   categories:
     - system
 dependencies: []
